--- a/apply.html
+++ b/apply.html
@@ -63,6 +63,10 @@
       </div>
     </div>
   </div>
+  <div class="w3-card-4">
+    <div class="w3-container w3-">
+      <h2>"impossible to possible"</h2>
+    </div>
 </div>
 <form class="w3-container w3-card-4 w3-light-grey">
     
@@ -76,5 +80,8 @@
     <label>Last Name</label>
     <input class="w3-input w3-border w3-round" name="last" type="text"></p>
   </form>
+  <div class="w3-container">
+    
+    <p><button class="w3-button w3-black">Apply now</button></p>
 </body>
  </html>
